# spyder-claude

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SESSION_DEBUG.md  pypi_publish.sh  pyproject.toml  test_session_fix.py
spyder_claude/: __init__.py  api_key_security.py  config.py  encryption.py  migration.py  plugin.py  secure_storage.py  session.py
spyder_claude/permission_helper/: __init__.py  helper.py
spyder_claude/widget/: __init__.py  approval_dialog.py  approval_server.py  main_widget.py  preferences.py
tests/: README.md  __init__.py  conftest.py  test_approval.py  test_config.py  test_platform_utils.py  test_plugin.py
