[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spyder-claude"
version = "0.2.2"
description = "Spyder plugin for Claude Code interaction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "qtpy",
    "spyder>=6.0.0",
    "cryptography>=41.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

[project.entry-points."spyder.plugins"]
spyder_claude = "spyder_claude.plugin:SpyderClaude"

[tool.setuptools.packages.find]
where = ["."]
include = ["spyder_claude*"]

[tool.setuptools.package-data]
"spyder_claude.permission_helper" = ["helper.py"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
]
windows = [
    "pywin32>=306",
]
macos = [
    "pyobjc-framework-Security>=9.0",
]
linux = [
    "secretstorage>=3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
